--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -30,7 +30,7 @@
     display: flex;
     align-items: center;
     margin-right: 20px;
-
+    align-items: center;
     &Symbol {
       font-size: 20px;
       margin-right: 5px;
@@ -38,6 +38,12 @@
 
     &Name {
       font-size: 16px;
+      margin-right: 5px;
+    }
+
+    &Price {
+      font-weight: 500;
+
     }
   }
   &__portfolio {
