feat: added local storage for portfolio
added portfolio stored in local storage. added modal for selling currencies. fixed thunk for fetching crypto.

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -78,6 +78,20 @@
     cursor: pointer;
   }
 
+  &__link{
+    color: #666;
+    &:visited {
+      color: inherit;
+    }
+    &:hover {
+      color: #333;
+      text-decoration: underline;
+    }
+
+    &:active {
+      color: #555;
+    }
+  }
 }
 
 
