feat: add selling currencies in form

--- a/src/components/PortfolioModal/PortfolioModal.css
+++ b/src/components/PortfolioModal/PortfolioModal.css
@@ -79,4 +79,7 @@
 .portfolio-modal__negativeChange {
   color: red; }
 
+.invalid-feedback {
+  color: red; }
+
 /*# sourceMappingURL=PortfolioModal.css.map */
