--- a/src/components/PortfolioModal/PortfolioModal.scss
+++ b/src/components/PortfolioModal/PortfolioModal.scss
@@ -6,8 +6,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
-  max-width: 500px;
+  max-width: 600px;
   z-index: 999;
   border-radius: 16px;
   &__header{
@@ -43,6 +42,14 @@
       }
     }
   }
+  &__change {
+    &--positive{
+      color: green;
+    }
+    &--negative {
+      color: red;
+    }
+  }
 }
 
 .portfolio-modal__formGroup {
@@ -59,11 +66,10 @@
     border-radius: 5px;
     font-size: 16px;
     padding: 5px;
-  }
-
-  select, input[type="number"] {
+    width: auto;
     height: 40px;
   }
+
 }
 
 .portfolio-modal__sellButton {
@@ -78,16 +84,20 @@
   &:hover {
     background-color: #d32f2f;
   }
+
 }
 
 .portfolio-modal__table {
+  padding-top: 10px;
   border-collapse: collapse;
   width: 100%;
+  overflow-x: auto;
 
   th, td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
+
   }
 
   th {
@@ -99,15 +109,19 @@
     font-size: 14px;
   }
 }
-.portfolio-modal
 
-.portfolio-modal__positiveChange {
-  color: green;
-}
 
-.portfolio-modal__negativeChange {
-  color: red;
-}
+
 .invalid-feedback {
   color: red;
 }
+.portfolio-backdrop {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.5);
+   z-index: 998;
+
+ }
