--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: space-between;
   height: 60px;
-  padding: 0 20px;
+  padding: 0 10px;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
@@ -17,40 +17,49 @@
   }
 
   &__title {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     color: #222222;
+    margin: 0;
+    padding: 0;
   }
 
   &__cryptos {
     display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+    margin-right: 5px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__crypto {
     display: flex;
     align-items: center;
-    margin-right: 20px;
-    align-items: center;
+    margin-right: 10px;
+
     &Symbol {
-      font-size: 20px;
-      margin-right: 5px;
+      font-size: 16px;
+      margin-right: 2px;
     }
 
     &Name {
-      font-size: 16px;
-      margin-right: 5px;
+      font-size: 12px;
+      margin-right: 2px;
     }
 
     &Price {
+      font-size: 14px;
       font-weight: 500;
-
     }
   }
+
   &__portfolio {
     display: flex;
-    margin-right: 10px;
     align-items: center;
-
-
   }
 }
