--- a/src/components/CryptoInfoPage/CryptoInfoPage.scss
+++ b/src/components/CryptoInfoPage/CryptoInfoPage.scss
@@ -11,29 +11,40 @@
   }
 
   &__chart {
-    width: 60%;
+    width: 100%;
+    max-width: 600px;
+    @media screen and (min-width: 1024px){
+      width: 80%;
+      max-width: 100%;
+    }
   }
 
   &__info {
-    width: 40%;
-    margin-left: 20px;
+    width: 100%;
+    max-width: 600px;
+    margin-top: 20px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  &__row {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    color: #111111;
+    font-size: 16px;
   }
 
   &__label {
+    width: 50%;
     font-weight: bold;
     margin-right: 10px;
     color: #222222;
   }
 
-  &__row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-    color: #111111;
-  }
   &__value {
+    width: 50%;
     text-align: right;
 
     &.green {
@@ -61,4 +72,4 @@
       }
     }
   }
-  }
+}
