--- a/src/components/PortfolioModal/PortfolioModal.scss
+++ b/src/components/PortfolioModal/PortfolioModal.scss
@@ -9,7 +9,9 @@
   max-width: 600px;
   z-index: 999;
   border-radius: 16px;
-  &__header{
+  overflow: auto;
+  max-height: 90vh;
+  &__header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -19,6 +21,7 @@
       margin: 0;
       font-size: 24px;
     }
+
     &__closeButton {
       background-color: transparent;
       border: none;
@@ -30,98 +33,135 @@
         color: #000;
       }
     }
-    &__content {
-      display: flex;
-      flex-direction: column;
-    }
-    &__form {
-      margin-bottom: 20px;
+  }
 
-      h3 {
-        margin-top: 0;
-      }
+  &__content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__form {
+    margin-bottom: 20px;
+
+    h3 {
+      margin-top: 0;
     }
   }
+
   &__change {
-    &--positive{
+    &--positive {
       color: green;
     }
+
     &--negative {
       color: red;
     }
   }
-}
 
-.portfolio-modal__formGroup {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
+  &__table {
+    padding-top: 10px;
+    border-collapse: collapse;
+    width: 100%;
+    overflow-x: auto;
 
-  label {
-    margin-bottom: 5px;
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+
+    th {
+      background-color: #f2f2f2;
+      font-size: 16px;
+    }
+
+    td {
+      font-size: 14px;
+    }
   }
 
-  select, input {
-    border: 1px solid #ccc;
+  &__formGroup {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+
+    label {
+      margin-bottom: 5px;
+    }
+
+    select,
+    input {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      padding: 5px;
+      width: auto;
+      height: 40px;
+    }
+  }
+
+  &__sellButton {
+    background-color: #f44336;
+    border: none;
     border-radius: 5px;
+    color: white;
+    cursor: pointer;
     font-size: 16px;
-    padding: 5px;
-    width: auto;
-    height: 40px;
+    padding: 10px 20px;
+
+    &:hover {
+      background-color: #d32f2f;
+    }
   }
+
+  .invalid-feedback {
+    color: red;
+  }
+
 
 }
 
-.portfolio-modal__sellButton {
-  background-color: #f44336;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  cursor: pointer;
-  font-size: 16px;
-  padding: 10px 20px;
+@media (max-width: 768px) {
+  #sell-crypto-select{
+    height: 35px;
+  }
+  .portfolio-modal {
+    max-width: 90%;
 
-  &:hover {
-    background-color: #d32f2f;
+    &__boughtPrice,
+    &__cellBoughtPrice,
+    &__change--negative,
+    &__change--positive,
+    &__cellChange
+    {
+      display: none;
+    }
+
+    &__header {
+      flex-direction: column;
+      align-items: center;
+
+      h2 {
+        margin-bottom: 10px;
+        text-align: center;
+      }
+
+      &__closeButton {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
+    }
+    &__formGroup{
+      input{
+        height: 30px;
+      }
+
+    }
   }
 
+  .portfolio-modal__table {
+    font-size: 12px;
+  }
 }
-
-.portfolio-modal__table {
-  padding-top: 10px;
-  border-collapse: collapse;
-  width: 100%;
-  overflow-x: auto;
-
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-
-  }
-
-  th {
-    background-color: #f2f2f2;
-    font-size: 16px;
-  }
-
-  td {
-    font-size: 14px;
-  }
-}
-
-
-
-.invalid-feedback {
-  color: red;
-}
-.portfolio-backdrop {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, 0.5);
-   z-index: 998;
-
- }
