--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -15,7 +15,14 @@
     border-bottom: 1px solid #D9D9D9;
   }
 
-  &__cell {
+  &__cellName,
+  &__cellRank,
+  &__cellAbbreviation,
+  &__cellPrice,
+  &__cellMarketCap,
+  &__cellChange,
+  &__cellAction
+  {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
@@ -24,14 +31,6 @@
   &__row {
     border-bottom: 1px double #dddddd;
 
-  }
-  &__logo {
-    width: 5%;
-    img {
-      position: center;
-      width: 40px;
-      height: 40px;
-    }
   }
 
   &__name {
@@ -137,4 +136,39 @@
       cursor: not-allowed;
     }
   }
+}
+
+@media only screen and (max-width: 768px) {
+  .Table {
+    width: 100%;
+    margin: 10% auto;
+    overflow-x: auto;
+    height: 400px;
+
+    &__cellAbbreviation,
+    &__abbreviation,
+    &__cellMarketCap,
+    &__marketCap,
+    {
+      display: none;
+    }
+
+    &__name {
+      width: 20%;
+    }
+
+    &__price,
+    &__marketCap {
+      width: 25%;
+    }
+
+    &__action {
+      width: 10%;
+    }
+
+    &__cellChange {
+      width: 15%;
+    }
+  }
+
 }
